Bug 616394. Make sure to set mPostedReflowCallback to false even if we have no frameloader when the callback happens. r=roc, a=blocker